Hacking Picture Resize

--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,6 @@
   <body>
       <h1>Caleb's blog</h1>
       <h2>My blog about hacking</h2>
-      <img src="../src/img/hacker.jpg">
+      <img src="../src/img/hacker.jpg" alt="hacker" style="width: 150px; height: auto">
   </body>
 </html>
